add_library(SwiftLanguageService STATIC
  SemanticRefactoring.swift
  SwiftTestingScanner.swift
  FoldingRange.swift
  CMakeLists.txt
  SymbolInfo.swift
  RefactoringEdit.swift
  CodeActions/ConvertStringConcatenationToStringInterpolation.swift
  CodeActions/SyntaxRefactoringCodeActionProvider.swift
  CodeActions/ConvertJSONToCodableStruct.swift
  CodeActions/SyntaxCodeActionProvider.swift
  CodeActions/SyntaxCodeActions.swift
  CodeActions/ConvertIntegerLiteral.swift
  CodeActions/PackageManifestEdits.swift
  CodeActions/AddDocumentation.swift
  RefactoringResponse.swift
  SyntacticSwiftXCTestScanner.swift
  CommentXML.swift
  SymbolGraph.swift
  ClosureCompletionFormat.swift
  SemanticRefactorCommand.swift
  DocumentFormatting.swift
  DiagnosticReportManager.swift
  SemanticTokens.swift
  ExpandMacroCommand.swift
  Diagnostic.swift
  CodeCompletion.swift
  SwiftCodeLensScanner.swift
  SwiftCommand.swift
  RelatedIdentifiers.swift
  VariableTypeInfo.swift
  CodeCompletionSession.swift
  SyntaxTreeManager.swift
  Rename.swift
  RewriteSourceKitPlaceholders.swift
  SwiftLanguageService.swift
  TestDiscovery.swift
  OpenInterface.swift
  SyntaxHighlightingToken.swift
  MacroExpansion.swift
  AdjustPositionToStartOfIdentifier.swift
  SyntaxHighlightingTokenParser.swift
  CursorInfo.swift
  DocumentSymbols.swift
  SyntaxHighlightingTokens.swift
  GeneratedInterfaceManager.swift
  SignatureHelp.swift
  AdjustPositionToStartOfArgument.swift
)
set_target_properties(SwiftLanguageService PROPERTIES
  INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
target_link_libraries(SwiftLanguageService PUBLIC
  BuildServerIntegration
  LanguageServerProtocol
  SKOptions
  SourceKitD
  SourceKitLSP
  ToolchainRegistry
  IndexStoreDB
  SwiftSyntax::SwiftBasicFormat
  SwiftSyntax::SwiftSyntax
)

target_link_libraries(SourceKitLSP PRIVATE
  BuildServerProtocol
  Csourcekitd
  LanguageServerProtocolExtensions
  LanguageServerProtocolJSONRPC
  SemanticIndex
  SKLogging
  SKUtilities
  SwiftExtensions
  TSCExtensions
  Crypto
  TSCBasic
  SwiftSyntax::SwiftDiagnostics
  SwiftSyntax::SwiftIDEUtils
  SwiftSyntax::SwiftParser
  SwiftSyntax::SwiftParserDiagnostics
  SwiftSyntax::SwiftRefactor
  SwiftSyntax::SwiftSyntaxBuilder
  $<$<NOT:$<PLATFORM_ID:Darwin>>:FoundationXML>
)

